# edsc

./: .gitignore  edsc.spec  icon.afphoto  pyproject.toml  readme.md
.github/workflows/: ci.yml  release.yml
edsc/: __init__.py  __main__.py  binds.py  boost.py  commodities.py  config.py  controller_bindings.py  core.py  eddn.py  engine.py  flight_axes.py  flight_state.py  hud_colors.py  model.py  parsing.py  paths.py  raven.py  spansh.py  station_planning.py  stations.py  systems.py  thargoids.py  time_utils.py  trace.py
edsc/assets/: icon_map.afphoto  war.md
edsc/gui/: __init__.py  about_easter_egg.py  app.py  carrier_dialog.py  collapse_controller.py  collapse_icon.py  colonize_filters.py  colonize_page.py  commodity_page.py  controller_indicators.py  controller_tester.py  dock_anchor.py  flow_layout.py  gizmo.py  gizmo_window.py  glitch_overlay.py  icons.py  overlay.py  search_tasks.py  settings_dialog.py  stations_page.py  table_model.py  thargoid_effects.py  theme.py  tooltips.py  widgets.py
edsc/journal/: __init__.py  locator.py  watcher.py
edsc/platform/: __init__.py  _x11.py  clickthrough.py  controller.py  controller_linux.py  controller_sdl2.py  foreground.py  hotkeys.py  topmost.py
packaging/appimage/: build-appimage.sh
packaging/aur/: .SRCINFO  PKGBUILD  edsc.desktop
tests/: REVIEW.md  conftest.py  fakes.py  test_about_easter_egg.py  test_app.py  test_binds.py  test_boost.py  test_carrier_dialog.py  test_collapse.py  test_colonize_filters.py  test_colonize_page.py  test_commodities.py  test_commodity_page.py  test_controller.py  test_controller_bindings.py  test_controller_tester.py  test_core.py  test_dock_anchor.py  test_eddn.py  test_engine.py  test_flight_axes.py  test_flight_state.py  test_flow_layout.py  test_gizmo.py  test_gizmo_window.py  test_glitch_overlay.py  test_hud_colors.py  test_icons.py  test_location.py  test_locator.py  test_main.py  test_model.py  test_overlay.py  test_raven.py  test_search_tasks.py  test_settings_dialog.py  test_stations.py  test_stations_page.py  test_system_filters.py  test_systems.py  (+6 more)
