[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ed-supply-chain"
version = "0.1.0"
description = "EDSC - a companion overlay for Elite: Dangerous that tracks colonisation construction material needs against your cargo."
readme = "readme.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ThePineappleExpress" }]
dependencies = [
    "PySide6>=6.6",
    # X11/XWayland focus detection + true click-through (Linux only).
    "python-xlib>=0.33; sys_platform == 'linux'",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
edsc = "edsc.__main__:main"

[project.gui-scripts]
edsc-gui = "edsc.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["edsc*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
