[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ed-supply-chain"
dynamic = ["version"]
description = "EDSC - a companion overlay for Elite: Dangerous that tracks colonisation construction material needs against your cargo."
readme = "readme.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "ThePineappleExpress" }]
dependencies = [
    "PySide6>=6.6",
    # X11/XWayland focus detection + true click-through (Linux only).
    "python-xlib>=0.33; sys_platform == 'linux'",
    # Global VKB joystick input and its bundled native SDL2 runtime (Windows).
    "PySDL2>=0.9.17; sys_platform == 'win32'",
    "pysdl2-dll>=2.32.10,<3; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "ruff>=0.9",
    # Validates EDDN messages against the bundled official schemas in tests.
    "jsonschema>=4",
]

[project.scripts]
edsc = "edsc.__main__:main"

[project.gui-scripts]
edsc-gui = "edsc.__main__:main"

# Version is single-sourced from edsc/__init__.py (__version__).
[tool.setuptools.dynamic]
version = { attr = "edsc.__version__" }

[tool.setuptools.packages.find]
where = ["."]
include = ["edsc*"]

[tool.setuptools.package-data]
edsc = ["assets/*.png", "assets/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP", "B", "SIM", "C4", "PIE", "RUF"]
ignore = ["RUF001"]

[tool.ruff.lint.isort]
combine-as-imports = true
